--- a/Scarb.toml
+++ b/Scarb.toml
@@ -1,10 +1,10 @@
 [package]
-name = "ERC4626"
+name = "erc4626_yieldbox"
 version = "0.1.0"
 
 [dependencies]
-openzeppelin = { git = "https://github.com/OpenZeppelin/cairo-contracts.git", rev = "841a073" }
-snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry", tag = "v0.10.2" }
+openzeppelin = { git = "https://github.com/OpenZeppelin/cairo-contracts.git"}
+snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry", tag = "v0.14.0" }
 starknet = ">=2.3.1"
 
 [[target.starknet-contract]]
