--- a/Scarb.toml
+++ b/Scarb.toml
@@ -1,11 +1,19 @@
 [package]
-name = "erc4626_yieldbox"
+name = "erc4626"
 version = "0.1.0"
 
 [dependencies]
 openzeppelin = { git = "https://github.com/OpenZeppelin/cairo-contracts.git"}
 snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry", tag = "v0.14.0" }
-starknet = ">=2.3.1"
+starknet = "2.4.3"
 
 [[target.starknet-contract]]
+sierra = true
 casm = true
+allowed-libfuncs-list.name = "experimental"
+
+[cairo]
+sierra-replace-ids = true
+
+[tool.fmt]
+sort-module-level-items = true
